// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots templates|materials Materials-details 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <main
      class="story__template"
    >
      <article
        class="hero hero--products"
      >
        <section
          class="container hero__container"
        >
          <div
            class="flexgrid flexgrid--gutter flexgrid--column-reversed flexgrid--mobile-xl-row"
          >
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="hero__description"
              >
                <h1>
                  Lorem ipsum dolor sit amet
                </h1>
                 
                <p
                  class="copy--intro"
                >
                  Maecenas faucibus mollis interdum. Nulla vitae elit libero, a pharetra augue. Maecenas sed diam eget risus varius blandit sit amet non magna. Aenean lacinia bibendum nulla sed consectetur. Etiam porta sem malesuada magna mollis euismod. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nulla vitae elit libero, a pharetra augue.
                </p>
                 
                <div
                  class="price-table hero__price-table"
                >
                  <ul
                    class="price-table__list"
                    role="tablist"
                  >
                    <li
                      class="price-table__item"
                      role="tab"
                    >
                      <!---->
                       
                      <span
                        class="price-table__info"
                      >
                        <small
                          class="price-table__tagline"
                        >
                          
                                        Product,
                                        300g
                                        from
                                    
                        </small>
                         
                        <span
                          class="currency"
                        >
                          <span
                            class="currency__type"
                          >
                            EUR
                          </span>
                          
    33

                        </span>
                      </span>
                    </li>
                  </ul>
                   
                  <small
                    class="price-table__disclaimer"
                  >
                    *excl. VAT
                  </small>
                </div>
                 
                <a
                  class="button button--primary hero__button"
                  href=""
                >
                  Some label
                </a>
                 
                <ul
                  class="link-list link-list--icon hero__link-list"
                >
                  <li
                    class="link-list__item"
                  >
                    <a
                      class="link link--icon"
                      href="#/#"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Content-link
                      </span>
                    </a>
                  </li>
                   
                  <li
                    class="link-list__item"
                  >
                    <a
                      class="link link--icon"
                      href="#/#"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Download link
                      </span>
                    </a>
                  </li>
                  <li
                    class="link-list__item"
                  >
                    <a
                      class="link link--icon"
                      href="#/#"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Download link
                      </span>
                    </a>
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="hero__image--product"
              >
                <div
                  class="cms-image"
                  style="padding-top: 100%;"
                >
                  <picture
                    alt="Some alt text"
                    class="cms-image__image"
                  >
                    <source
                      media="(min-width: 1201px)"
                      srcset=""
                    />
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/600/600"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                </div>
              </div>
            </div>
          </div>
        </section>
      </article>
       
      <article
        class="ubr"
      >
        <section
          class="container"
        >
          <h2>
            Lorem ipsum dolor sit amet
          </h2>
           
          <div
            class="flexgrid flexgrid--gutter flexgrid--column-reversed flexgrid--mobile-xl-row"
          >
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="ubr__description"
              >
                <p>
                  Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Nullam quis risus eget urna mollis ornare vel eu leo.
                </p>
                 
                <ul
                  class="list ubr__list"
                >
                  <li
                    class="list__item"
                  >
                    Egestas Condimentum Malesuada
                  </li>
                  <li
                    class="list__item"
                  >
                    Fermentum Ligula Ipsum
                  </li>
                  <li
                    class="list__item"
                  >
                    Nullam quis risus eget urna mollis ornare vel eu leo
                  </li>
                  <li
                    class="list__item"
                  >
                    Sed posuere consectetur est at lobortis
                  </li>
                  <li
                    class="list__item"
                  >
                    Nullam id dolor id nibh ultricies vehicula ut id elit
                  </li>
                  <li
                    class="list__item"
                  >
                    Donec ullamcorper nulla non metus auctor fringilla
                  </li>
                  <li
                    class="list__item"
                  >
                    Cum sociis natoque penatibus et magnis dis parturient montes
                  </li>
                  <li
                    class="list__item"
                  >
                    Nulla vitae elit libero, a pharetra augue
                  </li>
                </ul>
              </div>
            </div>
             
            <div
              class="flexgrid__cell--xs-6"
            >
              <div
                class="ubr__image "
              >
                <div
                  class="cms-image img--responsive"
                  style="padding-top: 60%;"
                >
                  <picture
                    class="cms-image__image"
                  >
                    <source
                      media="(min-width: 1201px)"
                      srcset=""
                    />
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/600/360"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                </div>
              </div>
            </div>
          </div>
        </section>
      </article>
       
      <article
        class="examples"
      >
        <div
          class="container"
        >
          <header>
            <h2
              class="examples__headline"
            >
              Lorem ipsum dolor sit amet
            </h2>
          </header>
           
          <section
            class="examples__caption"
          >
            <strong
              class="caption-list__headline"
            >
              
        Optimized for:
    
            </strong>
             
            <ul
              class="caption-list"
            >
              <li
                class="caption-list__list-item"
              >
                
            
            
                <a>
                  Material
                </a>
              </li>
              <li
                class="caption-list__list-item"
              >
                
            
            
                <a>
                  Material
                </a>
              </li>
              <li
                class="caption-list__list-item"
              >
                
            
            
                <a>
                  Material
                </a>
              </li>
              <li
                class="caption-list__list-item"
              >
                
            
            
                <a>
                  Material
                </a>
              </li>
              <li
                class="caption-list__list-item"
              >
                
            
            
                <a>
                  Material
                </a>
              </li>
              <li
                class="caption-list__list-item"
              >
                
            
            
                <a>
                  Material
                </a>
              </li>
              <li
                class="caption-list__list-item"
              >
                
            
            
                <a>
                  Material
                </a>
              </li>
            </ul>
          </section>
           
          <div
            class="cards"
          >
            <div
              class="flexgrid flexgrid--gutter"
            >
              <div
                class="flexgrid__cell--sm-4 flexgrid__cell--xs-6"
              >
                <article
                  class="card examples__card"
                  tabindex="0"
                >
                  <div
                    class="card__visual"
                  >
                    <div
                      class="card__image"
                    >
                      <picture
                        class="img--responsive"
                      >
                        <!---->
                         
                        <!---->
                         
                        <source
                          media="(min-width: 768px)"
                          srcset=""
                        />
                         
                        <!---->
                         
                        <!---->
                         
                        <source
                          media="(max-width: 480px)"
                          srcset="/generator/svg/400/400"
                        />
                         
                        <img
                          alt=""
                          class="img--responsive img--lazy"
                          src=""
                        />
                      </picture>
                    </div>
                     
                    <!---->
                  </div>
                   
                  <div
                    class="card__content"
                  >
                    <h3
                      class="card__headline"
                    >
                      Apendiscing consectetuer
                    </h3>
                     
                    <p
                      class="card__description"
                    >
                      Maecenas faucibus mollis interdum. Curabitur blandit tempus porttitor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam.
                    </p>
                     
                    <a
                      class="link card__link router-link-exact-active router-link-active card__link"
                      href="#/"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Content-link
                      </span>
                    </a>
                  </div>
                </article>
              </div>
              <div
                class="flexgrid__cell--sm-4 flexgrid__cell--xs-6"
              >
                <article
                  class="card examples__card"
                  tabindex="0"
                >
                  <div
                    class="card__visual"
                  >
                    <div
                      class="card__image"
                    >
                      <picture
                        class="img--responsive"
                      >
                        <!---->
                         
                        <!---->
                         
                        <source
                          media="(min-width: 768px)"
                          srcset=""
                        />
                         
                        <!---->
                         
                        <!---->
                         
                        <source
                          media="(max-width: 480px)"
                          srcset="/generator/svg/400/400"
                        />
                         
                        <img
                          alt=""
                          class="img--responsive img--lazy"
                          src=""
                        />
                      </picture>
                    </div>
                     
                    <!---->
                  </div>
                   
                  <div
                    class="card__content"
                  >
                    <h3
                      class="card__headline"
                    >
                      Apendiscing consectetuer
                    </h3>
                     
                    <p
                      class="card__description"
                    >
                      Maecenas faucibus mollis interdum. Curabitur blandit tempus porttitor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam.
                    </p>
                     
                    <a
                      class="link card__link router-link-exact-active router-link-active card__link"
                      href="#/"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Content-link
                      </span>
                    </a>
                  </div>
                </article>
              </div>
              <div
                class="flexgrid__cell--sm-4 flexgrid__cell--xs-6"
              >
                <article
                  class="card examples__card"
                  tabindex="0"
                >
                  <div
                    class="card__visual"
                  >
                    <div
                      class="card__image"
                    >
                      <picture
                        class="img--responsive"
                      >
                        <!---->
                         
                        <!---->
                         
                        <source
                          media="(min-width: 768px)"
                          srcset=""
                        />
                         
                        <!---->
                         
                        <!---->
                         
                        <source
                          media="(max-width: 480px)"
                          srcset="/generator/svg/400/400"
                        />
                         
                        <img
                          alt=""
                          class="img--responsive img--lazy"
                          src=""
                        />
                      </picture>
                    </div>
                     
                    <!---->
                  </div>
                   
                  <div
                    class="card__content"
                  >
                    <h3
                      class="card__headline"
                    >
                      Apendiscing consectetuer
                    </h3>
                     
                    <p
                      class="card__description"
                    >
                      Maecenas faucibus mollis interdum. Curabitur blandit tempus porttitor. Aenean eu leo quam. Pellentesque ornare sem lacinia quam.
                    </p>
                     
                    <a
                      class="link card__link router-link-exact-active router-link-active card__link"
                      href="#/"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Content-link
                      </span>
                    </a>
                  </div>
                </article>
              </div>
            </div>
          </div>
        </div>
      </article>
       
      <article
        class="colors"
      >
        <div
          class="container"
        >
          <header>
            <h2>
              Lorem ipsum dolor sit amet
            </h2>
          </header>
           
          <div
            class="flexgrid flexgrid--gutter flexgrid--column-reversed flexgrid--mobile-xl-row"
          >
            <div
              class="flexgrid__cell--xs-6 flexgrid__cell--sm-4"
            >
              <div
                class="colors__swatches"
              >
                <ul
                  class="list colors__list"
                >
                  <li
                    class="list__item colors__list-item"
                  >
                    <a
                      class="hit-area"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="tooltip colors__tooltip"
                      >
                        <dl
                          class="list tooltip__list"
                        >
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Material:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            Ultimaker material
                          </dd>
                           
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Color:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            RAL 1234
                          </dd>
                           
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Weight:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            <span>
                              750 g
                            </span>
                          </dd>
                        </dl>
                      </div>
                       
                      <div
                        class="color"
                      >
                        <div
                          class="color__spec color__spec--show"
                        >
                          <!---->
                        </div>
                         
                        <div
                          class="color__spec color__spec--swatch"
                          style="background: rgb(0, 56, 123);"
                        />
                      </div>
                    </a>
                  </li>
                  <li
                    class="list__item colors__list-item"
                  >
                    <a
                      class="hit-area"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="tooltip colors__tooltip"
                      >
                        <dl
                          class="list tooltip__list"
                        >
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Material:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            Ultimaker material
                          </dd>
                           
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Color:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            RAL 1234
                          </dd>
                           
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Weight:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            <span>
                              750 g
                            </span>
                          </dd>
                        </dl>
                      </div>
                       
                      <div
                        class="color"
                      >
                        <div
                          class="color__spec color__spec--show"
                        >
                          <!---->
                        </div>
                         
                        <div
                          class="color__spec color__spec--swatch"
                          style="background: rgb(188, 64, 119);"
                        />
                      </div>
                    </a>
                  </li>
                  <li
                    class="list__item colors__list-item"
                  >
                    <a
                      class="hit-area"
                      role="button"
                      tabindex="0"
                    >
                      <div
                        class="tooltip colors__tooltip"
                      >
                        <dl
                          class="list tooltip__list"
                        >
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Material:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            Ultimaker transparent
                          </dd>
                           
                          <!---->
                           
                          <dt
                            class="list__item tooltip__list-item tooltip__label"
                          >
                            Weight:
                          </dt>
                           
                          <dd
                            class="list__item tooltip__list-item"
                          >
                            <span>
                              750 g
                            </span>
                          </dd>
                        </dl>
                      </div>
                       
                      <div
                        class="color"
                      >
                        <div
                          class="color__spec color__spec--show"
                        >
                          <!---->
                        </div>
                         
                        <div
                          class="color__spec color__spec--swatch"
                        />
                      </div>
                    </a>
                  </li>
                </ul>
                 
                <a
                  class="link router-link-exact-active router-link-active link--large"
                  href="#/"
                >
                  <!---->
                   
                  <span
                    class="link__underline"
                  >
                    <span>
                      Where to buy!
                    </span>
                  </span>
                </a>
              </div>
            </div>
             
            <div
              class="flexgrid__cell--sm-8 flexgrid__cell--xs-6"
            >
              <div
                class="colors__image colors__image--loading"
              >
                <div
                  class="cms-image"
                  style="padding-top: 60%;"
                >
                  <picture
                    class="cms-image__image"
                  >
                    <source
                      media="(min-width: 1201px)"
                      srcset=""
                    />
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/900/540/00387B/FFFFFF"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                </div>
              </div>
            </div>
          </div>
        </div>
      </article>
       
      <footer
        class="footer"
      >
        <div
          class="footer__container"
        >
          <div
            class="footer__primary"
          >
            <a
              aria-label="Ultimaker homepage"
              class="branded-logo footer__branded-logo router-link-exact-active router-link-active"
              href="#/"
            >
              <!---->
               
              <!---->
            </a>
             
            <nav
              class="footer__nav"
            >
              <div
                class="flexgrid"
              >
                <div
                  class="flexgrid__cell--xxs-6 flexgrid__cell--xs-8 flexgrid__cell--sm-6"
                >
                  <div
                    class="flexgrid"
                  >
                    <div
                      class="flexgrid__cell--xs-6"
                    >
                      <div
                        class="footer-nav__column"
                      >
                        <h3
                          class="footer-nav__title"
                          id="footer-nav__title-01"
                        >
                          Products
                        </h3>
                         
                        <ul
                          aria-labelledby="footer-nav__title-01"
                          class="footer-nav__list"
                        >
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Printers
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Materials
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Ultimaker Cura
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                     
                    <div
                      class="flexgrid__cell--xs-6"
                    >
                      <div
                        class="footer-nav__column"
                      >
                        <h3
                          class="footer-nav__title"
                          id="footer-nav__title-02"
                        >
                          Resources
                        </h3>
                         
                        <ul
                          aria-labelledby="footer-nav__title-02"
                          class="footer-nav__list"
                        >
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/api/pages/materials/ultimaker-cpe"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Manuals
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/api/pages/materials/ultimaker-pla"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Tips and Tricks
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Troubleshooting
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Education
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="flexgrid__cell--xxs-6 flexgrid__cell--xs-4 flexgrid__cell--sm-6"
                >
                  <div
                    class="footer-nav__column footer-nav__column--last footer-nav__column--double"
                  >
                    <h3
                      class="footer-nav__title"
                      id="footer-nav__title-03"
                    >
                      Company
                    </h3>
                     
                    <ul
                      aria-labelledby="footer-nav__title-03"
                      class="footer-nav__list"
                    >
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            About Ultimaker
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Careers
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Blog
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Press Room
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Events
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Resellers
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Request support
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Contact
                          </span>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </nav>
          </div>
           
          <div
            class="footer__secondary"
          >
            <nav
              class="social-nav footer__social-nav"
            >
              <ul
                aria-label="follow Ultimaker"
                class="social-nav__list"
              >
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="LinkedIn"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://nl.linkedin.com/company/ultimaker"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="Twitter"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://twitter.com/Ultimaker"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="YouTube"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://www.youtube.com/user/Ultimaker3D"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="Facebook"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://www.facebook.com/Ultimaker"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="Instagram"
                    class="social-nav__link icon-button icon-button--small"
                    href="http://instagram.com/ultimaker"
                  >
                    <!---->
                  </a>
                </li>
              </ul>
            </nav>
             
            <div
              class="footer__locale-selector"
            >
              <a
                aria-label="Change your country, currently: Netherlands"
                class="icon-button icon-button--small locale-selector__edit--buton"
                role="button"
                tabindex="0"
              >
                <!---->
                 
                <span
                  class="icon-button__label"
                >
                  
                    Netherlands - €
                
                </span>
              </a>
               
              <a
                aria-label="change your country"
                class="icon-button icon-button--small locale-selector__edit--buton"
                role="button"
                style="display: none;"
                tabindex="0"
              >
                <!---->
                 
                <!---->
              </a>
               
              <!---->
            </div>
          </div>
           
          <div
            class="footer__tertiary"
          >
            <div
              class="legal footer__legal"
            >
              <p
                class="legal__copyright-label"
              >
                <small>
                  Copyright
                </small>
              </p>
               
              <nav
                class="legal__nav"
              >
                <ul
                  class="legal__list"
                >
                  <li
                    class="legal__item"
                  >
                    <a
                      class="link legal__link"
                      href="#/#"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Terms of Use
                      </span>
                    </a>
                  </li>
                  <li
                    class="legal__item"
                  >
                    <a
                      class="link legal__link"
                      href="#/#"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Privacy and Cookie Policy
                      </span>
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </footer>
    </main>
  </section>
</section>
`;

exports[`Storyshots templates|materials Materials-overview 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <main
      class="story__template"
    >
      <nav
        aria-label="sub items"
        class="sub-nav sub-nav--fixed"
      >
        <div
          class="faux-vertical-scroll"
        >
          <div
            class="faux-vertical-scroll__content"
          >
            <ul
              class="sub-nav__list"
              role="presentation"
            >
              <li
                class="sub-nav__item"
              >
                <a
                  class="sub-nav__link"
                  href="#/materials/ultimaker-pla"
                >
                  <picture
                    class="sub-nav__image"
                  >
                    <!---->
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/60/60"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                   
                  <p
                    class="sub-nav__label"
                  >
                    PLA
                  </p>
                </a>
              </li>
              <li
                class="sub-nav__item"
              >
                <a
                  class="sub-nav__link"
                  href="#/materials/ultimaker-abs"
                >
                  <picture
                    class="sub-nav__image"
                  >
                    <!---->
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/60/60"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                   
                  <p
                    class="sub-nav__label"
                  >
                    ABS
                  </p>
                </a>
              </li>
              <li
                class="sub-nav__item"
              >
                <a
                  class="sub-nav__link"
                  href="#/materials/ultimaker-nylon"
                >
                  <picture
                    class="sub-nav__image"
                  >
                    <!---->
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/60/60"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                   
                  <p
                    class="sub-nav__label"
                  >
                    Nylon NA
                  </p>
                </a>
              </li>
              <li
                class="sub-nav__item"
              >
                <a
                  class="sub-nav__link"
                  href="#/materials/ultimaker-cpe"
                >
                  <picture
                    class="sub-nav__image"
                  >
                    <!---->
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/60/60"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                   
                  <p
                    class="sub-nav__label"
                  >
                    CPE NA
                  </p>
                </a>
              </li>
              <li
                class="sub-nav__item"
              >
                <a
                  class="sub-nav__link"
                  href="#/materials/ultimaker-cpe"
                >
                  <picture
                    class="sub-nav__image"
                  >
                    <!---->
                     
                    <source
                      media="(min-width: 1025px)"
                      srcset=""
                    />
                     
                    <!---->
                     
                    <!---->
                     
                    <!---->
                     
                    <source
                      media="(max-width: 480px)"
                      srcset="/generator/svg/60/60"
                    />
                     
                    <img
                      alt=""
                      class="img--responsive img--lazy"
                      src=""
                    />
                  </picture>
                   
                  <p
                    class="sub-nav__label"
                  >
                    CPE+ NA
                  </p>
                </a>
              </li>
            </ul>
          </div>
           
          <div
            class="faux-vertical-scroll__bar"
            style="display: hidden; opacity: 0; width: 0px;"
          />
        </div>
      </nav>
       
      <article
        class="hero hero--video"
      >
        <picture>
          <source
            media="(min-width: 1201px)"
            srcset=""
          />
           
          <!---->
           
          <source
            media="(min-width: 768px)"
            srcset=""
          />
           
          <!---->
           
          <!---->
           
          <source
            media="(max-width: 480px)"
            srcset="/generator/svg/1000/500"
          />
           
          <img
            alt=""
            class="img--responsive hero-video__image--full img--lazy"
            src=""
          />
        </picture>
         
        <div
          class="hero-video__image--overlay"
        />
         
        <section
          class="container"
        >
          <div
            class="flexgrid__cell--xs-6 hero--video-reset"
          >
            <h1
              class="hero-video__headline"
            >
              Lorum ipsum dolor sit amet consectetuer
            </h1>
             
            <p
              class="copy--intro"
            >
              Maecenas sed diam eget risus varius blandit sit amet non magna. Donec id elit non mi porta gravida.
            </p>
             
            <a
              class="link link--large router-link-exact-active router-link-active link--icon"
              href="#/"
            >
              <!---->
               
              <span
                class="link__underline"
              >
                Play Video
              </span>
            </a>
          </div>
        </section>
         
        <!---->
      </article>
       
      <footer
        class="footer"
      >
        <div
          class="footer__container"
        >
          <div
            class="footer__primary"
          >
            <a
              aria-label="Ultimaker homepage"
              class="branded-logo footer__branded-logo router-link-exact-active router-link-active"
              href="#/"
            >
              <!---->
               
              <!---->
            </a>
             
            <nav
              class="footer__nav"
            >
              <div
                class="flexgrid"
              >
                <div
                  class="flexgrid__cell--xxs-6 flexgrid__cell--xs-8 flexgrid__cell--sm-6"
                >
                  <div
                    class="flexgrid"
                  >
                    <div
                      class="flexgrid__cell--xs-6"
                    >
                      <div
                        class="footer-nav__column"
                      >
                        <h3
                          class="footer-nav__title"
                          id="footer-nav__title-01"
                        >
                          Products
                        </h3>
                         
                        <ul
                          aria-labelledby="footer-nav__title-01"
                          class="footer-nav__list"
                        >
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Printers
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Materials
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Ultimaker Cura
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                     
                    <div
                      class="flexgrid__cell--xs-6"
                    >
                      <div
                        class="footer-nav__column"
                      >
                        <h3
                          class="footer-nav__title"
                          id="footer-nav__title-02"
                        >
                          Resources
                        </h3>
                         
                        <ul
                          aria-labelledby="footer-nav__title-02"
                          class="footer-nav__list"
                        >
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/api/pages/materials/ultimaker-cpe"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Manuals
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/api/pages/materials/ultimaker-pla"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Tips and Tricks
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Troubleshooting
                              </span>
                            </a>
                          </li>
                          <li
                            class="footer-nav__item"
                          >
                            <a
                              class="link footer-nav__link"
                              href="#/#"
                            >
                              <!---->
                               
                              <span
                                class="link__underline"
                              >
                                Education
                              </span>
                            </a>
                          </li>
                        </ul>
                      </div>
                    </div>
                  </div>
                </div>
                 
                <div
                  class="flexgrid__cell--xxs-6 flexgrid__cell--xs-4 flexgrid__cell--sm-6"
                >
                  <div
                    class="footer-nav__column footer-nav__column--last footer-nav__column--double"
                  >
                    <h3
                      class="footer-nav__title"
                      id="footer-nav__title-03"
                    >
                      Company
                    </h3>
                     
                    <ul
                      aria-labelledby="footer-nav__title-03"
                      class="footer-nav__list"
                    >
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            About Ultimaker
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Careers
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Blog
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Press Room
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Events
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Resellers
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Request support
                          </span>
                        </a>
                      </li>
                      <li
                        class="footer-nav__item"
                      >
                        <a
                          class="link footer-nav__link"
                          href="#/#"
                        >
                          <!---->
                           
                          <span
                            class="link__underline"
                          >
                            Contact
                          </span>
                        </a>
                      </li>
                    </ul>
                  </div>
                </div>
              </div>
            </nav>
          </div>
           
          <div
            class="footer__secondary"
          >
            <nav
              class="social-nav footer__social-nav"
            >
              <ul
                aria-label="follow Ultimaker"
                class="social-nav__list"
              >
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="LinkedIn"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://nl.linkedin.com/company/ultimaker"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="Twitter"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://twitter.com/Ultimaker"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="YouTube"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://www.youtube.com/user/Ultimaker3D"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="Facebook"
                    class="social-nav__link icon-button icon-button--small"
                    href="https://www.facebook.com/Ultimaker"
                  >
                    <!---->
                  </a>
                </li>
                 
                <li
                  class="social-nav__item footer__social-item"
                >
                  <a
                    aria-label="Instagram"
                    class="social-nav__link icon-button icon-button--small"
                    href="http://instagram.com/ultimaker"
                  >
                    <!---->
                  </a>
                </li>
              </ul>
            </nav>
             
            <div
              class="footer__locale-selector"
            >
              <a
                aria-label="Change your country, currently: Netherlands"
                class="icon-button icon-button--small locale-selector__edit--buton"
                role="button"
                tabindex="0"
              >
                <!---->
                 
                <span
                  class="icon-button__label"
                >
                  
                    Netherlands - €
                
                </span>
              </a>
               
              <a
                aria-label="change your country"
                class="icon-button icon-button--small locale-selector__edit--buton"
                role="button"
                style="display: none;"
                tabindex="0"
              >
                <!---->
                 
                <!---->
              </a>
               
              <!---->
            </div>
          </div>
           
          <div
            class="footer__tertiary"
          >
            <div
              class="legal footer__legal"
            >
              <p
                class="legal__copyright-label"
              >
                <small>
                  Copyright
                </small>
              </p>
               
              <nav
                class="legal__nav"
              >
                <ul
                  class="legal__list"
                >
                  <li
                    class="legal__item"
                  >
                    <a
                      class="link legal__link"
                      href="#/#"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Terms of Use
                      </span>
                    </a>
                  </li>
                  <li
                    class="legal__item"
                  >
                    <a
                      class="link legal__link"
                      href="#/#"
                    >
                      <!---->
                       
                      <span
                        class="link__underline"
                      >
                        Privacy and Cookie Policy
                      </span>
                    </a>
                  </li>
                </ul>
              </nav>
            </div>
          </div>
        </div>
      </footer>
    </main>
  </section>
</section>
`;
